# animal-ethics-benchmark

./: README.md  add_tags_ids.py  aha.py  anai_inspect_task.py  anai_inspect_task_v2.py  anai_inspect_task_v3.py  anai_inspect_task_v4.py  anai_inspect_task_v5.py  analysis.py  analysis_models_compare.py  analysis_models_compare_non-judges.py  analysis_tags_stats_figures.py  basic_gen.py  clean_csvs.py  combine.py  combine_synthetic_reddit  combine_synthetic_reddit.py  curated_v2  evals_v2.py  evals_v3.py  evals_v4.py  evals_v5.py  figure.py  figures.py  figures_final.py  filter_reddit_questions.py  logfileanalysis.py  pyproject.toml  result_tables.py  results_summary.py  results_summary_sd.py  results_summary_self_company.py  scoring.py  split_public_private.py  tag_analysis.py
aha/: README.md  aha.py  analysis.py  data.json  scoring.py
anai/: apis.py  eval_agents.py  filter_reddit_questions.py  filtering.py  gen_agents.py  gen_scenarios.py  getting_reddit_questions_script1.py  getting_reddit_questions_script2.py
artifacts/: ab_reddit.json  aha_data.json  animals.json  arguments.json  curated.json  curated_v2.json  curated_v3.json  dilemma_types.json  filtered.json  humans.json  reddit_curated.json  synthetic.json
artifacts/archive/: animals.json  curated.json  generated_scenarios.json  reddit_curated.json
src/anai/: __init__.py
test/: evals_v3.py  inspectview.py  results_summary_self_company.py  test_anthropic_api.py
